--- a/Backend/config/config.env
+++ b/Backend/config/config.env
@@ -1,13 +1,12 @@
-PORT = 4000
+PORT = 3001
 
 FRONTEND_URL = http://localhost:3000/
 
-MONGODB_URL = mongodb+srv://asmitkr27:Asmit2343@cluster0.knhv2is.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URL = mongodb+srv://asmitkr27:Asmit2343@cluster0.knhv2is.mongodb.net/
 
 
 
-Asmit2343
-asmitkr27
+
 
 
 
